feat: Alteracao e criacao de linkar ocmpany ao user
