# docs/swagger.yaml
@@ -817,6 +817,45 @@ paths:
       summary: Alterar senha do usuário
       tags:
       - users
+  /users/link-company/{company_id}:
+    post:
+      consumes:
+      - application/json
+      description: Vincula uma empresa específica ao usuário atualmente autenticado
+      parameters:
+      - description: ID da empresa
+        in: path
+        name: company_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Empresa vinculada com sucesso
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: ID inválido ou usuário já vinculado
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Empresa não encontrada
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Erro interno do servidor
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Vincular empresa ao usuário logado
+      tags:
+      - users
   /users/profile:
     delete:
       consumes:
